[package]
name = "memejoin-rs"
version = "0.1.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.152"
serde_json = "1.0.93"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "voice"] }
songbird = { version = "0.3.0", features = [ "builtin-queue" ] }
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
