[package]
name = "memejoin-rs"
version = "0.2.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
axum = { version = "0.6.9", features = ["headers", "multipart"] }
axum-extra = { version = "0.7.5", features = ["cookie-private", "cookie"] }
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
enum-iterator = "1.4.1"
futures = "0.3.26"
iter_tools = "0.1.4"
reqwest = "0.11.14"
serde = "1.0.152"
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.0", features = ["v4"] }

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache", "voice"]

[dependencies.songbird]
version = "0.3.2"
features = [ "builtin-queue", "yt-dlp" ]

[target.'cfg(unix)'.dependencies]
rusqlite = { version = "0.29.0", features = ["chrono"] }

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
